fix: :art: Ajustes no front-end das tabelas de ações
Foram ajustados erros na tabeloa de ações de invistaLogado, onde a seção de venda de ações não apresentava a quantidade de ações que o usuário possuía. Também, foi adicionado as tabelas o nome das empresas através de uma query no banco de dados. Ademais, foram ajustados erros em geral no código que faziam com que as tabelas de ações de carteira e de invistaLogado não se comportassem corretamente.

--- a/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoVenderAcao.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/secao/secaoVenderAcao.html
@@ -22,8 +22,6 @@
       placeholder="Insira a quantidade de ações"
       oninput="verificarQuantidadeEPrecoVenda(this)"
       onblur="formatarQuantidade(this)"
-      min="1"
-      step="0.01"
     />
   </div>
 
@@ -35,12 +33,11 @@
   <div class="input-preco-acao-venda text-start fw-bold">
     <p class="text-uppercase">Preço desejado por ação</p>
     <input
-      type="text"
+      type="number"
       class="form-control custom-input-acoes quantidadePrecoAcoesInputVenda"
       placeholder="Insira o preço desejado por ação"
       oninput="verificarQuantidadeEPrecoVenda(this)"
       onblur="verificarCasasDecimaisVenda(this)"
-      min="0.01"
     />
   </div>
 
@@ -54,7 +51,7 @@
   </div>
 
   <div class="valor-total-da-operacao text-uppercase fw-bold">
-    <span class="valor-total-da-venda">R$ XX.XX</span>
+    <span class="valor-total-da-venda">R$ </span>
   </div>
 
   <div class="label-saldo-atual text-uppercase text-start fw-bold">
