--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
@@ -4,6 +4,7 @@
     <table class="table table-custom margin-table accordion">
       <thead>
         <tr>
+          <th scope="col">EMPRESA</th>
           <th scope="col">SIGLA</th>
           <th scope="col">PREÇO ATUAL</th>
           <th scope="col">PREÇO MÉDIO COMPRA</th>
@@ -16,6 +17,7 @@
         <div th:each="acao, acaoStat : ${acoesUsuario} ">
           <tr>
             <div class="accordion-header" id="panelsStayOpen-headingOne">
+              <td th:text="${acao[6]}"></td>
               <td th:text="${acao[0]}" th:id="siglaAcao + ${acaoStat.index}" ></td>
               <td th:text="'R$ ' + ${acao[1]}"></td>
               <td th:text="'R$ ' + ${acao[3]}"></td>
