--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaOfertasVendaUser.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaOfertasVendaUser.html
@@ -1,5 +1,5 @@
 <div class="container row justify-content-center" th:fragment="tabelaOfertasVendaUser">
-    <link href="css/stylesheet.css" rel="stylesheet" />
+    <link href="../../../static/css/stylesheet.css" rel="stylesheet" />
     
     <table class="table table-custom margin-table accordion">
         <thead>
