--- a/stocktrade/src/main/resources/templates/historico.html
+++ b/stocktrade/src/main/resources/templates/historico.html
@@ -16,7 +16,7 @@
             Histórico
           </h1>
         </div>
-        <h5>Todos as movimentações</h5>
+        <h5>Todas as movimentações</h5>
       </div>
     </div>
 
@@ -25,363 +25,11 @@
 
   <footer th:replace="~{fragments/footerLogadoFragment :: footer}"></footer>
 
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.6/css/jquery.dataTables.css">
+  <script type="text/javascript" charset="utf8"
+    src="https://cdn.datatables.net/1.11.6/js/jquery.dataTables.js"></script>
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-  <script th:inline="javascript">
-    // Função para alternar a visibilidade do saldo quando o ícone do olho é clicado
-    document.getElementById("toggleEye").addEventListener("click", function () {
-      const saldo = document.getElementById("saldo");
-      const variacaoSaldo = document.getElementById("variacao-saldo");
-      if (saldo.style.opacity === "0") {
-        saldo.style.opacity = "1";
-        variacaoSaldo.style.opacity = "1";
-      } else {
-        saldo.style.opacity = "0";
-        variacaoSaldo.style.opacity = "0";
-      }
-    });
-
-    function atualizarTela() {
-      const elementoDataHora = document.getElementById("data-hora");
-      const dataHoraAtual = new Date();
-      const options = { year: 'numeric', month: 'numeric', day: 'numeric', hour: 'numeric', minute: 'numeric' };
-      const dataHoraFormatada = dataHoraAtual.toLocaleDateString('pt-BR', options);
-      // Atualizar data/hora
-      elementoDataHora.textContent = "Atualizado em " + dataHoraFormatada;
-
-      // Atualizar Variação Saldo
-      const elementoVariacaoSaldo = document.getElementById("variacao-saldo");
-      const valorSaldo = parseFloat(elementoVariacaoSaldo.querySelector('span').textContent);
-
-      if (valorSaldo > 0) {
-        elementoVariacaoSaldo.classList.add("verde");
-        elementoVariacaoSaldo.querySelector('span').textContent = "+ R$" + valorSaldo
-      } else if (valorSaldo < 0) {
-        elementoVariacaoSaldo.classList.add("vermelho");
-        elementoVariacaoSaldo.querySelector('span').textContent = "- R$" + valorSaldo
-      } else {
-        elementoVariacaoSaldo.classList.add("branco");
-        elementoVariacaoSaldo.querySelector('span').textContent = "R$" + valorSaldo
-      }
-
-      // Atualizar Lucro Total
-      const elementoLucroTotal = document.getElementById("lucro-total");
-      const stringCharElmLucroTotal = elementoLucroTotal.querySelector('span').textContent;
-
-      if (stringCharElmLucroTotal.includes("+")) {
-        elementoLucroTotal.classList.add("verde");
-      } else if (stringCharElmLucroTotal.includes("-")) {
-        elementoLucroTotal.classList.add("vermelho");
-      } else {
-        elementoLucroTotal.classList.add("branco");
-      }
-
-      // Atualizar Melhor Performance
-      const elementoMelhorPerformance = document.getElementById("melhor-performance");
-      const stringElmMelPerformance = elementoMelhorPerformance.querySelector('span').textContent;
-
-      if (stringElmMelPerformance.includes("+")) {
-        elementoMelhorPerformance.classList.add("verde");
-      } else if (stringElmMelPerformance.includes("-")) {
-        elementoMelhorPerformance.classList.add("vermelho");
-      } else {
-        elementoMelhorPerformance.classList.add("branco");
-      }
-
-      // Atualizar Pior Performance
-      const elementoPiorPerformance = document.getElementById("pior-performance");
-      const stringElmPiorPerformance = elementoPiorPerformance.querySelector('span').textContent;
-
-      if (stringElmPiorPerformance.includes("+")) {
-        elementoPiorPerformance.classList.add("verde");
-      } else if (stringElmPiorPerformance.includes("-")) {
-        elementoPiorPerformance.classList.add("vermelho");
-      } else {
-        elementoPiorPerformance.classList.add("branco");
-      }
-    }
-
-    window.onload = function () {
-      atualizarTela();
-    };
-  </script>
-
-  <script>
-
-    function limparCampos(event) {
-      const acoesCompra = document.getElementsByClassName('quantidadeAcoesInputCompra')
-      const senhasCompra = document.getElementsByClassName('senhaAutenticacaoInputCompra')
-
-      const acoesVenda = document.getElementsByClassName('quantidadeAcoesInputVenda')
-      const senhasVenda = document.getElementsByClassName('senhaAutenticacaoInputVenda')
-
-      const precoAcaoVenda = document.getElementsByClassName('quantidadePrecoAcoesInputVenda')
-      const precoAcaoCompra = document.getElementsByClassName('quantidadePrecoAcoesInputCompra')
-
-      for (i = 0; i < acoesCompra.length; i++) {
-        acoesCompra.item(i).value = ""
-        senhasCompra.item(i).value = ""
-
-        acoesVenda.item(i).value = ""
-        senhasVenda.item(i).value = ""
-
-        precoAcaoVenda.item(i).value = ""
-        precoAcaoCompra.item(i).value = ""
-      }
-    }
-
-    function limitSenhaAutenticacao(input) {
-      input.value = input.value.replace(/\D/g, ""); // permite apenas dígitos
-      if (input.value.length > 4) {
-        input.value = input.value.slice(0, 4); // limita a 4 dígitos
-      }
-    }
-
-    function verificarCamposSolicitacaoCompra(event) {
-      const acoes = document.getElementsByClassName('quantidadeAcoesInputCompra')
-      const senhas = document.getElementsByClassName('senhaAutenticacaoInputCompra')
-      const precoPorAcao = document.getElementsByClassName('quantidadePrecoAcoesInputCompra')
-      const senhaError = document.getElementsByClassName('senha-error-compra')
-
-      j = acoes.length;
-
-      for (i = 0; i < acoes.length; i++) {
-
-        if (acoes.item(i).value != "" && senhas.item(i).value != "" && precoPorAcao.item(i).value != "") {
-
-          const siglaAcao = document.getElementById("siglaAcao" + i)
-          console.log(senhaError.item(i))
-
-          enviarSolicitacaoCompra(event, acoes.item(i).value, senhas.item(i).value, siglaAcao.innerText, precoPorAcao.item(i).value, senhaError.item(i))
-          break;
-        }
-        j--;
-      }
-
-      if (j == 0) {
-        alert("Preencha todos os campos obrigatórios")
-      }
-    }
-
-    function enviarSolicitacaoCompra(event, quantidadeAcoes, senhaAutenticacao, siglaAcao, precoAcao, senhaError) {
-
-      const data = {
-        siglaAcao: siglaAcao,
-        quantidadeAcoes: quantidadeAcoes,
-        senhaAutenticacao: senhaAutenticacao,
-        precoAcao: precoAcao
-      }
-
-      fetch("/carteira/comprar", {
-        method: "post",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify(data),
-      })
-        .then((response) => {
-          if (response.ok) {
-            window.location.href = "/carteira";
-          } else {
-            console.log(response.data);
-            response.text().then(data => {
-              senhaError.textContent = data;
-            });
-          }
-        })
-        .catch((error) => {
-          alert("Ocorreu um erro ao comprar!");
-          console.error(error);
-        });
-    }
-
-  </script>
-
-  <script>
-    function verificarCamposSolicitacaoVenda(event) {
-      const acoes = document.getElementsByClassName('quantidadeAcoesInputVenda')
-      const senhas = document.getElementsByClassName('senhaAutenticacaoInputVenda')
-      const precoPorAcao = document.getElementsByClassName('quantidadePrecoAcoesInputVenda')
-      const senhaError = document.getElementsByClassName('senha-error-venda')
-
-      j = acoes.length;
-
-      for (i = 0; i < acoes.length; i++) {
-
-        if (acoes.item(i).value != "" && senhas.item(i).value != "" && precoPorAcao.item(i).value != "") {
-
-          const siglaAcao = document.getElementById("siglaAcao" + i)
-          console.log(senhaError.item(i))
-
-          enviarSolicitacaoVenda(event, acoes.item(i).value, senhas.item(i).value, siglaAcao.innerText, precoPorAcao.item(i).value, senhaError.item(i))
-          break;
-        }
-        j--;
-      }
-
-      if (j == 0) {
-        alert("Preencha todos os campos obrigatórios")
-      }
-    }
-
-    function enviarSolicitacaoVenda(event, quantidadeAcoes, senhaAutenticacao, siglaAcao, precoAcao, senhaError) {
-
-      const data = {
-        siglaAcao: siglaAcao,
-        quantidadeAcoes: quantidadeAcoes,
-        senhaAutenticacao: senhaAutenticacao,
-        precoAcao: precoAcao
-      }
-
-      fetch("/carteira/vender", {
-        method: "post",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify(data),
-      })
-        .then((response) => {
-          if (response.ok) {
-            window.location.href = "/carteira";
-          } else {
-            console.log(response.data);
-            response.text().then(data => {
-              senhaError.textContent = data;
-            });
-          }
-        })
-        .catch((error) => {
-          alert("Ocorreu um erro ao vender!");
-          console.error(error);
-        });
-    }
-  </script>
-
-
-  <script>
-
-    function sumirContainerCompraEAparecerContainerVender(event) {
-      const containerCompra = document.getElementsByClassName("container-comprar");
-      const containerVender = document.getElementsByClassName("container-vender");
-
-      for (i = 0; i < containerCompra.length; i++) {
-        containerCompra.item(i).style.display = "none";
-        containerVender.item(i).style.display = "grid";
-      }
-    }
-
-    function sumirContainerVenderEAparecerContainerCompra(event) {
-      const containerCompra = document.getElementsByClassName("container-comprar");
-      const containerVender = document.getElementsByClassName("container-vender");
-
-      for (i = 0; i < containerCompra.length; i++) {
-        containerCompra.item(i).style.display = "grid";
-        containerVender.item(i).style.display = "none";
-      }
-    }
-  </script>
-
-  <script>
-    function verificarQuantidadeEPrecoCompra(input) {
-      const quantidadeInput = document.getElementsByClassName(
-        "quantidadeAcoesInputCompra"
-      );
-      const precoInput = document.getElementsByClassName(
-        "quantidadePrecoAcoesInputCompra"
-      );
-
-      if (input.value.length > 8) {
-        input.value = input.value.slice(0, 8);
-      }
-
-      for (let i = 0; i < quantidadeInput.length; i++) {
-        const quantidadeValue = quantidadeInput[i].value.trim();
-        if (/^\d+$/.test(quantidadeValue) && precoInput[i].value != "") {
-          let quantidade = parseInt(quantidadeValue, 10);
-          const preco = parseFloat(precoInput[i].value);
-
-          const valorTotal = quantidade * preco;
-
-          const valorTotalDaCompra = document.getElementsByClassName(
-            "valor-total-da-compra"
-          );
-          valorTotalDaCompra[i].innerHTML = "R$ " + valorTotal.toFixed(2);
-
-          console.log(valorTotal.toFixed(2));
-        } else {
-          const valorTotalDaCompra = document.getElementsByClassName(
-            "valor-total-da-compra"
-          );
-          valorTotalDaCompra[i].innerHTML = "R$ " + "";
-        }
-      }
-    }
-  </script>
-
-  <script>
-    function verificarQuantidadeEPrecoVenda(input) {
-      if (input.value.length > 8) {
-        input.value = input.value.slice(0, 8);
-      }
-
-      const quantidadeInput = document.getElementsByClassName(
-        "quantidadeAcoesInputVenda"
-      );
-      const precoInput = document.getElementsByClassName(
-        "quantidadePrecoAcoesInputVenda"
-      );
-
-      for (let i = 0; i < quantidadeInput.length; i++) {
-        const quantidadeValue = quantidadeInput[i].value.trim();
-        if (/^\d+$/.test(quantidadeValue) && precoInput[i].value != "") {
-          let quantidade = parseInt(quantidadeValue, 10);
-          const preco = parseFloat(precoInput[i].value);
-
-          const valorTotal = quantidade * preco;
-
-          const valorTotalDaVenda = document.getElementsByClassName(
-            "valor-total-da-venda"
-          );
-          valorTotalDaVenda[i].innerHTML = "R$ " + valorTotal.toFixed(2);
-
-          console.log(valorTotal.toFixed(2));
-        } else {
-          const valorTotalDaVenda = document.getElementsByClassName(
-            "valor-total-da-venda"
-          );
-          valorTotalDaVenda[i].innerHTML = "R$ " + "";
-        }
-      }
-    }
-  </script>
-
-  <script>
-    function verificarCasasDecimaisCompra(input) {
-      if (input.value !== "") {
-        const precoInput = document.getElementsByClassName(
-          "quantidadePrecoAcoesInputCompra"
-        );
-
-        const preco = parseFloat(input.value);
-
-        input.value = preco.toFixed(2);
-      }
-    }
-  </script>
-
-  <script>
-    function verificarCasasDecimaisVenda(input) {
-      if (input.value !== "") {
-        const precoInput = document.getElementsByClassName(
-          "quantidadePrecoAcoesInputVenda"
-        );
-
-        const preco = parseFloat(input.value);
-
-        input.value = preco.toFixed(2);
-      }
-    }
-  </script>
-
 </body>
 
 </html>
