--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -10,19 +10,21 @@
       <div th:replace="~{fragments/headerFragment :: header('Invista')}"></div>
 
       <div class="container mb-4 justify-content-center">
-        <div class="container row justify-content-center">
-          <div class="col-md-6 mb-5 texts justify-content-center">
-            <h4 class="max-width-550px">Invista Agora Mesmo!</h4>
-            <p class="fs-6 mt-4 mb-6 max-width-550px">
-              Venha conhecer esse mercado que cresce cada vez mais na
-              atualidade! Aprenda a gerir seu dinheiro da melhor maneira com a
-              StrockTrade
-            </p>
+        <div class="row ms-5 mt-5">
+          <div class="col-md-6">
+              <h1 class="fonte-size-index fw-bold mt-100">Negocie mais de 100 Ações na StockTrade</h1>
           </div>
-        </div>
+          <div class="col-md-6 mt-100">
+              <img
+                  src="images/laptop-home-att.png"
+                  alt="Imagem laptop"
+                  class="img-fluid mt-3"
+                  style="width: 85%"
+              />
+          </div>
       </div>
 
-      <div class="container mb-5">
+      <div class="container mb-5 mt-100">
         <!-- Linha dos Cards -->
         <div class="row justify-content-center">
           <!-- Card 1 Carteira -->
