style: :art: Novas modificações no front
Alterações front não logado

--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -17,7 +17,7 @@
           <div class="col-md-6 mt-100">
               <img
                   src="images/laptop-home-att.png"
-                  alt="Imagem laptop"
+                  alt="Imagem laptop home att"
                   class="img-fluid mt-3"
                   style="width: 85%"
               />
