--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -258,6 +258,19 @@ body {
   border-top-right-radius: 10px;
 }
 
+.custom-card8 {
+  background-color: var(--dark-blue);
+  color: var(--white);
+  border: none;
+  border-radius: 60px;
+  width: 600px;
+  height: 280px;
+  margin: 0;
+  padding-top: 20px;
+  margin-top: 60px;
+}
+
+
 .texto-card7 {
   padding-left: 15px;
   padding-right: 15px;
@@ -360,6 +373,22 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+.container-img-background3 {
+  background-image: url('../images/sobre-pic.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.container-img-background4 {
+  background-image: url('../images/contato-pic.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+
 
 .form-row>div {
   float: left;
@@ -513,6 +542,10 @@ h4 {
 
 .custom-padding-left8{
   padding-left: 950px
+}
+
+.custom-padding-left9 {
+  padding-left: 25px;
 }
 
 .custom-padding-top {
