Alteração mensagem do header da tabela

--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaMovimentacoes.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaMovimentacoes.html
@@ -4,9 +4,9 @@
     <table class="table table-custom margin-table accordion">
         <thead>
             <tr>
-                <th scope="col">DATA</th>
-                <th scope="col">TIPO</th>
-                <th scope="col">VALOR</th>
+                <th scope="col">Data</th>
+                <th scope="col">Tipo</th>
+                <th scope="col">Valor</th>
             </tr>
         </thead>
         <tbody>
