--- a/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
+++ b/stocktrade/src/main/resources/templates/fragments/tabela/tabelaAcoesUser.html
@@ -1,7 +1,7 @@
 <div class="container row justify-content-center" th:fragment="tabelaAcoesUser">
 <link href="css/stylesheet.css" rel="stylesheet" />
 
-    <table class="table table-custom margin-table accordion">
+    <table class="table table-custom margin-table accordion" id="ofertasCompraTable">
       <thead>
         <tr>
           <th scope="col">EMPRESA</th>
